--- a/church/belief.html
+++ b/church/belief.html
@@ -14,37 +14,40 @@
         <script src="../pageView.js"></script>
     </head>
     <body>
-        <!-- Sidebar -->
-        <script>Write.Sidebar();</script>
+        <!-- SideMenu -->
+        <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
-        <!-- Main Info -->
-        <main>
-            <h2>우리의 믿음</h2>
-            <hr>
-            <h3>Nicene Creed: 니케아 신조</h3>
-            <br>
-            <h3>Apostle's Creed: 사도 신경</h3>
-            <br>
-            <h3>Athanasian Creed: 아타나시우스 신경</h3>
-            <br>
-            <h3>Dort Creed / Canons of Dort: 도르트 신경 / 도르트 교헌,  교회질서</h3>
-            <br>
-            <h3>The Definition of the Council of Chalcedon: 칼케돈 공의회의 정의</h3>
-            <br>
-            <h3>Westminster Confession of Faith: 웨스트민스터 신앙고백</h3>
-            <br>
-            <h3>Belgic Confession of Faith: 벨직 신앙고백</h3>
-            <br>
-            <h3>Westminster Catechism (Large and Small): 웨스트민스터 대/소요리문답</h3>
-            <br>
-            <h3>Heidelberg Catechism: 하이델베르크 요리문답</h3>
-            <br><br><br><br><br><br><br><br>
-        </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            <!-- Main Info -->
+            <main>
+                <h2>우리의 믿음</h2>
+                <hr>
+                <h3>Nicene Creed: 니케아 신조</h3>
+                <br>
+                <h3>Apostle's Creed: 사도 신경</h3>
+                <br>
+                <h3>Athanasian Creed: 아타나시우스 신경</h3>
+                <br>
+                <h3>Dort Creed / Canons of Dort: 도르트 신경 / 도르트 교헌,  교회질서</h3>
+                <br>
+                <h3>The Definition of the Council of Chalcedon: 칼케돈 공의회의 정의</h3>
+                <br>
+                <h3>Westminster Confession of Faith: 웨스트민스터 신앙고백</h3>
+                <br>
+                <h3>Belgic Confession of Faith: 벨직 신앙고백</h3>
+                <br>
+                <h3>Westminster Catechism (Large and Small): 웨스트민스터 대/소요리문답</h3>
+                <br>
+                <h3>Heidelberg Catechism: 하이델베르크 요리문답</h3>
+                <br><br><br><br><br><br><br><br>
+            </main>
+    
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
