--- a/church/helpers.html
+++ b/church/helpers.html
@@ -17,21 +17,24 @@
         <!-- SideMenu -->
         <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
 
-        <!-- Main Info -->
-        <main>
-            <h2>섬기는 사람들</h2><hr></hr>
-            <br><br>
-            <h3>목사:</h3> 김재섭
-            <br><br><br>
-            <h3>안수 집사:</h3> 김수현, 김남경
-            <br><br><br><br><br><br><br><br><br>/
-        </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            <!-- Main Info -->
+            <main>
+                <h2>섬기는 사람들</h2><hr></hr>
+                <br><br>
+                <h3>목사:</h3> 김재섭
+                <br><br><br>
+                <h3>안수 집사:</h3> 김수현, 김남경
+                <br><br><br><br><br><br><br><br><br>/
+            </main>
+    
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
