--- a/communication/community.html
+++ b/communication/community.html
@@ -18,18 +18,21 @@
         <!-- SideMenu -->
         <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
 
-        <!-- Main Info -->
-        <main>
-            <h2>커뮤니티</h2><hr>
-            <br><p>커뮤니티 사이트 만드는 중...</p>
-            <img src="../img/under-construction.gif" >
-        </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            <!-- Main Info -->
+            <main>
+                <h2>커뮤니티</h2><hr>
+                <br><p>커뮤니티 사이트 만드는 중...</p>
+                <img src="../img/under-construction.gif" >
+            </main>
+    
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
