--- a/info/gallery.html
+++ b/info/gallery.html
@@ -18,17 +18,20 @@
         <!-- SideMenu -->
         <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
 
-        <!-- Main Info -->
-        <main>
-            <h2>갤러리</h2><hr>
-            공사중...
-        </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            <!-- Main Info -->
+            <main>
+                <h2>갤러리</h2><hr>
+                공사중...
+            </main>
+    
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
