--- a/service/worship-guide.html
+++ b/service/worship-guide.html
@@ -15,85 +15,77 @@
     </head>
     <body>
 
-        <!-- Sidebar -->
-        <script>Write.Sidebar();</script>
+        <!-- SideMenu -->
+        <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
 
-        <!-- Main Info -->
-        <main>
-            <div class="WorshipTimetable">
-            <h2>예배안내</h2>
-            </div>
-            <hr>
-            <br>
-            <br>
-            <div class="TimeRow">
-                <div class="Column">
-                    <div class="SundayTime">
-                        <h3>일요일</h3> 
-                        <ul>      
+            <!-- Main Info -->
+            <main>
+                <div class="WorshipTimetable">
+                <h2>예배안내</h2>
+                </div>
+                <hr>
+                <br>
+                <br>
+                <div class="TimeRow">
+                    <div class="Column">
+                        <div class="SundayTime">
+                            <h3>일요일</h3> 
+                            <ul>      
+                                <li>
+                                    <h4>주일학교:</h4>   9:00 ~ 10:00 AM
+                                </li>
+                                <li>
+                                    <h4>오전예배:</h4>   11:00 ~ 12:00 PM *
+                                    <br>
+                                </li>
+                                <li>
+                                    <h4>오후예배:</h4>   2:00 ~ 3:00 PM *
+                                    <br>
+                                </li>
+                                <li>
+                                    <h4>중고등부 성경공부:</h4>   6:00 (?)
+                                    <br>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                <br> 
+                <br>
+                    <div class="Column">
+                        <div class="WednesdayTime">
+                            <h3>수요일</h3>
+                            <ul>
                             <li>
-                                <h4>주일학교:</h4>   9:00 ~ 10:00 AM
-                            </li>
-                            <li>
-                                <h4>오전예배:</h4>   11:00 ~ 12:00 PM *
+                                <h4>수요기도회:</h4>   7:00 ~ 8:00 PM
                                 <br>
                             </li>
-                            <li>
-                                <h4>오후예배:</h4>   2:00 ~ 3:00 PM *
-                                <br>
-                            </li>
-                            <li>
-                                <h4>중고등부 성경공부:</h4>   6:00 (?)
-                                <br>
-                            </li>
-                        </ul>
+                            </ul>
+                        </div>
+                        <br>
+                        <div class="DayBreakTime">
+                            <h3>평일 새벽</h3>
+                            <ul>
+                                <li>
+                                    <h4>새벽기도회:</h4>   5:30 AM  
+                                    <br>
+                                </li>
+                            </ul>
+                        <br><br>
+                        <div class="caution" style="font-size: 12px;"> [*: 예배 30분 전부터 준비 찬송합니다.]</div>
+                        </div>
                     </div>
                 </div>
-            <br> 
-            <br>
-                <div class="Column">
-                    <div class="WednesdayTime">
-                        <h3>수요일</h3>
-                        <ul>
-                        <li>
-                            <h4>수요기도회:</h4>   7:00 ~ 8:00 PM
-                            <br>
-                        </li>
-                        </ul>
-                    </div>
-                    <br>
-                    <div class="DayBreakTime">
-                        <h3>평일 새벽</h3>
-                        <ul>
-                            <li>
-                                <h4>새벽기도회:</h4>   5:30 AM  
-                                <br>
-                            </li>
-                        </ul>
-                    <br><br>
-                    <div class="caution" style="font-size: 12px;"> [*: 예배 30분 전부터 준비 찬송합니다.]</div>
-                    </div>
-                </div>
-            </div>
-        </main>
+            </main>
 
 
-
-
-
-
-
-
-
-
-
-
-            
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
