--- a/strive/supported_church.html
+++ b/strive/supported_church.html
@@ -18,27 +18,30 @@
         <!-- SideMenu -->
         <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
 
-        <!-- Main Info -->
-        <main>
-            <h2>함께하는 교회들</h2><hr>
-            <br><br>
-            <ul>
-                <li><a href="#">경산중부교회</a></li>
-                <li><a href="#">김해지구촌교회</a></li>
-                <li><a href="#">대구청구교회</a></li>
-                <li><a href="#">마산산호교회</a></li>
-                <li><a href="#">여주금평교회</a></li>
-                <li><a href="#">일산백석교회</a></li>
-                <li><a href="#">장유제일교회</a></li>
-            </ul>
-            <br><br><br><br>
-        </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            <!-- Main Info -->
+            <main>
+                <h2>함께하는 교회들</h2><hr>
+                <br><br>
+                <ul>
+                    <li><a href="#">경산중부교회</a></li>
+                    <li><a href="#">김해지구촌교회</a></li>
+                    <li><a href="#">대구청구교회</a></li>
+                    <li><a href="#">마산산호교회</a></li>
+                    <li><a href="#">여주금평교회</a></li>
+                    <li><a href="#">일산백석교회</a></li>
+                    <li><a href="#">장유제일교회</a></li>
+                </ul>
+                <br><br><br><br>
+            </main>
+    
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
