--- a/about/address.html
+++ b/about/address.html
@@ -16,30 +16,32 @@
     </head>
     <body>
 
-        <!-- Sidebar -->
-        <script>Write.Sidebar();</script>
+        <!-- SideMenu -->
+        <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
 
-        <!-- Main Info -->
-        <main>
-            <div class="subheading"><h2>주소</h2>
-            <hr></div>
-            <ul>
-                <br><br>
-                <li><h3>교회 전화번호:</h3> 055-323-0691 </li> <br>
-                <li><h3>교회 주소:</h3> 경상남도 김해시 장유로 190 부영프라자 504호 </li> <br>
-                <li><h3>교회 유튜브 채널:</h3> <a href="https://www.youtube.com/channel/UCRK4Oarw7zwgJrbYP_HturA">youtube.com/김해시민교회</a></li> <br>
-                <li><h3>교회 블로그:</h3> <a href="https://blog.naver.com/gimhae_simin">blog.naver.com/gimhae_simin</a> </li> <br>
-                <li><h3>교회 이메일:</h3> churchofheaven1236@gmail.com </li><br>
-                <li><h3>교회 카카오톡:</h3> 개설 중... </li>
-            </ul>
-
-        </main>
+            <!-- Main Info -->
+            <main>
+                <div class="subheading"><h2>주소</h2>
+                <hr></div>
+                <ul>
+                    <br><br>
+                    <li><h3>교회 전화번호:</h3> 055-323-0691 </li> <br>
+                    <li><h3>교회 주소:</h3> 경상남도 김해시 장유로 190 부영프라자 504호 </li> <br>
+                    <li><h3>교회 유튜브 채널:</h3> <a href="https://www.youtube.com/channel/UCRK4Oarw7zwgJrbYP_HturA">youtube.com/김해시민교회</a></li> <br>
+                    <li><h3>교회 블로그:</h3> <a href="https://blog.naver.com/gimhae_simin">blog.naver.com/gimhae_simin</a> </li> <br>
+                    <li><h3>교회 이메일:</h3> churchofheaven1236@gmail.com </li><br>
+                    <li><h3>교회 카카오톡:</h3> 개설 중... </li>
+                </ul>
+            </main>
    
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
