--- a/communication/contactus.html
+++ b/communication/contactus.html
@@ -18,18 +18,21 @@
         <!-- SideMenu -->
         <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
 
-        <!-- Main Info -->
-        <main>
-            <h2>문의</h2><hr>
-            <br><p>공사중...!</p>
-            <img src="../img/under-construction.gif" >
-        </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            <!-- Main Info -->
+            <main>
+                <h2>문의</h2><hr>
+                <br><p>공사중...!</p>
+                <img src="../img/under-construction.gif" >
+            </main>
+    
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
