--- a/contents/inform.html
+++ b/contents/inform.html
@@ -18,21 +18,24 @@
         <!-- SideMenu -->
         <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
 
-        <!-- Main Info -->
-        <main>
-            <h2>공지사항</h2> <hr>
-            <p>
-                공사중...
-            </p>
-            <img src="../img/under-construction.gif">
+            <!-- Main Info -->
+            <main>
+                <h2>공지사항</h2> <hr>
+                <p>
+                    공사중...
+                </p>
+                <img src="../img/under-construction.gif">
 
-        </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            </main>
+    
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
