--- a/info/helpfullinks.html
+++ b/info/helpfullinks.html
@@ -18,16 +18,19 @@
         <!-- SideMenu -->
         <script>Write.SideMenu();</script>
 
-        <!-- Header -->
-        <script>Write.Header();</script>
+        <div id="content">
+            <!-- Header -->
+            <script>Write.TopHeader();</script>
+            <script>Write.HeaderNav();</script>
 
-        <!-- Main Info -->
-        <main>
-            <h2>도움되는 링크들</h2><hr>
+            <!-- Main Info -->
+            <main>
+                <h2>도움되는 링크들</h2><hr>
 
-        </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
+            </main>
+    
+            <!-- footer -->
+            <script>Write.Footer();</script>
+        </div>
     </body>
 </html>
