--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="headernav">
                 <div class="title">
                     <a href="https://gimhaesimin.netlify.app/index.html">
-                        <img src="img/logo_header.svg" />
+                        <img src="../img/logo_header.svg" />
                     </a>
                 </div>
                 <div class="navbar-left">
