--- a/login/login.html
+++ b/login/login.html
@@ -6,7 +6,7 @@
         <title>로그인 - 김해시민교회</title>
         <link rel="stylesheet" href="../style.css"/>
         <link rel="stylesheet" href="style_.css">
-        <link rel="icon" href="../img/logo_head.svg">
+        <link rel="icon" href="../../img/logo_head.svg">
     </head>
     <body>
         <!-- Main Info -->
