--- a/test_sidebar/test_sidebar.html
+++ b/test_sidebar/test_sidebar.html
@@ -4,7 +4,7 @@
         <title>김해시민교회</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
-        <link rel="icon" href="../img/logo_head.svg"/>
+        <link rel="icon" href="../../img/logo_head.svg"/>
         <link rel="stylesheet" href="../style.css"/>
         <link rel="stylesheet" href="test_sidebar.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -93,7 +93,7 @@
             <div class="headernav">
                 <div class="title">
                     <a href="https://gimhaesimin.netlify.app/index.html">
-                        <img src="../img/logo_header.svg" />
+                        <img src="../../img/logo_header.svg" />
                     </a>
                 </div>
                 <div class="navbar-left">
