--- a/about/address.html
+++ b/about/address.html
@@ -6,18 +6,18 @@
         <title>주소 - 김해시민교회</title>
         <link rel="stylesheet" href="../style.css"/>
         <link rel="stylesheet" href="style_address.css">
-        <link rel="icon" href="img/logo_head.svg">
+        <link rel="icon" href="../img/logo_head.svg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-        <script src="../sideMenu.js"></script>
+        <script src="../Sidebar.js"></script>
         <script src="../pageView.js"></script>
         
     </head>
     <body>
 
-        <!-- SideMenu -->
-        <script>Write.SideMenu();</script>
+        <!-- Sidebar -->
+        <script>Write.Sidebar();</script>
 
         <div id="content">
             <!-- Header -->
