--- a/Church_Website_ver1_old/index.html
+++ b/Church_Website_ver1_old/index.html
@@ -14,7 +14,7 @@
     <body>
 
         <!-- sidebar -->
-        <input type="button" id="opacity" onclick="Show.Sidebar();" style="display:none"></div>
+        <input type="button" id="opacity" onclick="Show.Sidebar();" style="display:none"/>
         <div id="sidebar">
           <nav class="sidebar">
             <!-- Your sidebar content here -->
